identity: Consolidate the exit path

https://bugzilla.gnome.org/show_bug.cgi?id=776906